implement proper google api libs

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ go.work
 test.py
 creds.json
 config.json
+chromedriver
+budget-reporter
+test.json
+client_secret.json
+creds_sva.json
+token.json
